syntax = "proto3";

package customer.api;

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

message BetResult {
  string betId = 1 [(kalix.field).entity_key = true];
  string customerId = 2;
  double amount = 3;
  bool won = 4;
}

message GetBetResultRequest {
    string bet_id = 1 [(kalix.field).entity_key = true];
}

service BetSettlementService {
    option (kalix.codegen) = {
      value_entity: {
        name: "customer.domain.BetResult"
        entity_type: "bet_results"
        state: "customer.domain.BetResultState"
      }
    };
  
    rpc Create(BetResult) returns (google.protobuf.Empty) {}
  
    rpc GetBetResult(GetBetResultRequest) returns (BetResult) {}
  
  }