syntax = "proto3";

package customer.domain;

message BetResultState {
  string bet_id = 1;
  string customer_id = 2;
  double amount = 3;
  bool won = 4;
}